--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
           Plots
         </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/12-Weather-Viz-Website/temperature.html">Temperature</a>
-            <a class="dropdown-item" href="/12-Weather-Viz-Website/humidity.html">Humidity</a>
-            <a class="dropdown-item" href="/12-Weather-Viz-Website/cloudiness.html">Cloudiness</a>
-            <a class="dropdown-item" href="/12-Weather-Viz-Website/windspeed.html">Wind Speed</a>
+            <a class="dropdown-item" href="temperature.html">Temperature</a>
+            <a class="dropdown-item" href="humidity.html">Humidity</a>
+            <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
+            <a class="dropdown-item" href="windspeed.html">Wind Speed</a>
           </div>
         </li>
         <li class="nav-item">
