--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <nav class="navbar navbar-expand-md navbar-light border border-bottom" style="padding-top: 0px; padding-bottom: 0px;">
-    <a class="navbar-brand" href="/12-Weather-Viz-Website"><h3>Lattitude</h3></a>
+    <a class="navbar-brand" href="/Weather-Viz-Website"><h3>Lattitude</h3></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -31,10 +31,10 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/12-Weather-Viz-Website/comparison.html">Comparison</a>
+          <a class="nav-link" href="comparison.html">Comparison</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/12-Weather-Viz-Website/data.html">Data</a>
+          <a class="nav-link" href="data.html">Data</a>
         </li>
       </ul>
     </div>
@@ -58,16 +58,16 @@
         <div class="card">
           <h5 class="card-header">Visualizations</h5>
           <div class="card-body" align='center'>
-            <a href='/12-Weather-Viz-Website/temperature.html'>
+            <a href='temperature.html'>
             <img src='Resources/assets/images/Fig1.png' width='40%'>
           </a>
-            <a href='/12-Weather-Viz-Website/humidity.html'>
+            <a href='humidity.html'>
             <img src='Resources/assets/images/Fig2.png' width='40%'>
             </a>
-            <a href='/12-Weather-Viz-Website/cloudiness.html'>
+            <a href='cloudiness.html'>
             <img src='Resources/assets/images/Fig3.png' width='40%'>
             </a>
-            <a href='/12-Weather-Viz-Website/windspeed.html'>
+            <a href='windspeed.html'>
             <img src='Resources/assets/images/Fig4.png' width='40%'>
             </a>
           </div>
