--- a/humidity.html
+++ b/humidity.html
@@ -14,7 +14,7 @@
 
 <body>
   <nav class="navbar navbar-expand-md navbar-light border border-bottom" style="padding-top: 0px; padding-bottom: 0px;">
-    <a class="navbar-brand" href="/12-Weather-Viz-Website"><h3>Lattitude</h3></a>
+    <a class="navbar-brand" href="Weather-Viz-Website"><h3>Lattitude</h3></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -25,17 +25,17 @@
           Plots
         </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="/12-Weather-Viz-Website/temperature.html">Temperature</a>
-            <a class="dropdown-item" href="/12-Weather-Viz-Website/humidity.html">Humidity</a>
-            <a class="dropdown-item" href="/12-Weather-Viz-Website/cloudiness.html">Cloudiness</a>
-            <a class="dropdown-item" href="/12-Weather-Viz-Website/windspeed.html">Wind Speed</a>
+            <a class="dropdown-item" href="temperature.html">Temperature</a>
+            <a class="dropdown-item" href="humidity.html">Humidity</a>
+            <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
+            <a class="dropdown-item" href="windspeed.html">Wind Speed</a>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/12-Weather-Viz-Website/comparison.html">Comparison</a>
+          <a class="nav-link" href="comparison.html">Comparison</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/12-Weather-Viz-Website/data.html">Data</a>
+          <a class="nav-link" href="data.html">Data</a>
         </li>
       </ul>
     </div>
@@ -61,22 +61,22 @@
             <div class='container'>
               <div class='row'>
                 <div class="col-md-6">
-                  <a href='/12-Weather-Viz-Website/temperature.html'>
+                  <a href='temperature.html'>
                     <img src='Resources/assets/images/Fig1.png' width='100%'>
                   </a>
                 </div>
                 <div class="col-md-6">
-                  <a href='/12-Weather-Viz-Website/humidity.html'>
+                  <a href='/humidity.html'>
                   <img src='Resources/assets/images/Fig2.png' class="border border-primary" width='100%'>
                 </a>
                 </div>
                 <div class="col-md-6">
-                  <a href='/12-Weather-Viz-Website/cloudiness.html'>
+                  <a href='cloudiness.html'>
                     <img src='Resources/assets/images/Fig3.png' width='100%'>
                   </a>
                 </div>
                 <div class="col-md-6">
-                  <a href='/12-Weather-Viz-Website/windspeed.html'>
+                  <a href='windspeed.html'>
                     <img src='Resources/assets/images/Fig4.png' width='100%'>
                   </a>
                 </div>
