--- a/comparison.html
+++ b/comparison.html
@@ -52,13 +52,13 @@
               <div class='row'>
                 <div class="col-md-6">
                   <h5 class="card-header">vs Max Temperature</h5>
-                  <a href='/12-Weather-Viz-Website/temperature.html'>
+                  <a href='temperature.html'>
                     <img src='Resources/assets/images/Fig1.png'  width='100%'>
                   </a>
                 </div>
                 <div class="col-md-6">
                   <h5 class="card-header">vs Humidity</h5>
-                  <a href='Weather-Viz-Website/humidity.html'>
+                  <a href='humidity.html'>
                   <img src='Resources/assets/images/Fig2.png' width='100%'>
                 </a>
                 </div>
