--- a/comparison.html
+++ b/comparison.html
@@ -31,10 +31,10 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Weather-Viz-Website/comparison.html">Comparison</a>
+          <a class="nav-link" href="comparison.html">Comparison</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Weather-Viz-Website/data.html">Data</a>
+          <a class="nav-link" href="data.html">Data</a>
         </li>
       </ul>
     </div>
