--- a/windspeed.html
+++ b/windspeed.html
@@ -13,7 +13,7 @@
 
 <body>
   <nav class="navbar navbar-expand-md navbar-light border border-bottom" style="padding-top: 0px; padding-bottom: 0px;">
-    <a class="navbar-brand" href="Weather-Viz-Website/"><h3>Lattitude</h3></a>
+    <a class="navbar-brand" href="index.html"><h3>Lattitude</h3></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
