--- a/cloudiness.html
+++ b/cloudiness.html
@@ -74,7 +74,7 @@
                   </a>
                 </div>
                 <div class="col-md-6">
-                  <a href='Weather-Viz-Website/windspeed.html'>
+                  <a href='windspeed.html'>
                     <img src='Resources/assets/images/Fig4.png' width='100%'>
                   </a>
                 </div>
